corrected form side spacing

--- a/src/style/form/style-form.css
+++ b/src/style/form/style-form.css
@@ -6,7 +6,7 @@
   outline: none;
   align-items: center;
   width: 95%;
-  padding: 5px;
+  padding-bottom: 12px;
 }
 
 .icon-caption-container {
@@ -17,8 +17,9 @@
   border-radius: 4px;
   display: flex;
   height: 72px;
-  padding-right: 40px,;
   width: 100%;
+  padding-left: 20px;
+  padding-right: 20px;
 }
 
 .input-container {
@@ -29,5 +30,6 @@
   position: absolute;
   top: -10px;
   border: none;
-  left: 5px;
+  padding-left: 20px;
+  padding-right: 20px;
 }
